--- a/user-book-management/src/main/resources/application.properties
+++ b/user-book-management/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=user-book-management
 
 server.port= 8082
 
+logging.level.org.springframework.security=DEBUG
+
+
 #database configuration:mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/restdb
 spring.datasource.username=root
